--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ footer {
 }
 .modal{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     top: 0%;
     left: 0%;
@@ -281,7 +281,7 @@ footer {
 }
 .basModal{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     top: 0%;
     left: 0%;
