--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ footer {
     position: fixed;
     top: 0%;
     left: 0%;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(20px);
     align-items: center;
     justify-content: center;
@@ -290,7 +290,7 @@ footer {
     position: fixed;
     top: 0%;
     left: 0%;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(20px);
     align-items: center;
     justify-content: center;
